<resources>
    <string name="app_name">RETRO RUMBLE</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Sign in</string>
    <string name="second_fragment_label">Sign up</string>
    <string name="third_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rr_welcome"><b>The biggest retro game store in Bangkok, now open!</b></string>
    <string name="rr_welcome2">We might have the one that suits your appetite, drop by and feel free to have a look!</string>
    <string name="rr_services">Offering services for retro/vintage consoles, by retro gamers.</string>
    <string name="rr_joinwelcome"><b>Join today to receive your RETRO RUMBLE benefits!</b></string>
    <string name="rr_signup">By signing up, it is unanimous that you have acknowledged and agreed to <b>RETRO RUMBLE privacy policy</b> and agreed to <b>RETRO RUMBLE terms of agreement</b>.</string>
    <string name="membershipLevel">Your current Membership level:</string>
    <string name="rr_level1">RETRO RUMBLE Plus</string>
    <string name="rr_level2">RETRO RUMBLE Ultimate</string>
    <string name="arcade_pass">Arcade Pass</string>
    <string name="free_drinks">Free Drinks Pass</string>
    <string name="rr_nearyou">RETRO RUMBLE near you</string>
    <string name="rr_agree">I agree to <b>RETRO RUMBLE privacy policy</b> and <b>RETRO RUMBLE terms of agreement </b>(Published 10th May, 2027).</string>
    <string name="rr_About">Thappaya Wangsantiporn (2007010001) </string>
    <string name="rr_Copyright">©2027 RETRO RUMBLE, a subsidiary of 4D inc. All Rights Reserved.</string>
    <string name="rr_AboutTitle">About RETRO RUMBLE</string>
    <string name="createdBy">Created by</string>
    <string name="shopButton">RETRO RUMBLE eShop</string>
    <string name="shopTitle">Welcome to RETRO RUMBLE eShop!</string>
    <string name="forYou">Recommended for you:</string>
    <string name="neoGeo">SNK NEO-GEO AES Complete Pak</string>
    <string name="neoGeoPrice">Starts at 23,990 THB</string>
    <string name="shopButtonTitle">View our selection:</string>
    <string name="PlayStation">PlayStation Consoles</string>
    <string name="PSTitle">RETRO RUMBLE</string>
    <string name="PSTitle2">PlayStation Authorized Dealer</string>
    <string name="NewestArrival">Newest Arrival:</string>
    <string name="PS3BC">PLAYSTATION 3 60GB CECH-A06 (ASIA/Backwards Compatible)</string>
    <string name="ps3Quote">Starts at 4,500 THB</string>
    <string name="AESTitle">SNK NEO-GEO AES Video Game System</string>
    <string name="AES_Description">SNK NEO-GEO AES is a video game console manufactured by SNK in 1990s, aimed to bring Arcade Titles to the comfort
    of your home. With a continuity feature of bringing your own save file from your AES console to the MVS Arcade Machine and vice versa,
        it is considered by many to be a console that is ahead of its time.</string>
    <string name="addExtraController">Add Extra Controller: 400 THB</string>
    <string name="addHDMIAdapter">Add HDMI Converter: 200 THB</string>
    <string name="PSOne">PlayStation 1/PSOne</string>
    <string name="PSTwo">PlayStation 2</string>
    <string name="PSThree">PLAYSTATION 3/PS3</string>
    <string name="PSFour">PlayStation 4</string>
    <string name="PSFive">PlayStation 5</string>
    <string name="ViewAll">View all</string>
    <string name="SEGA_name">SEGA Consoles</string>
    <string name="rr_Support">RETRO RUMBLE Support</string>
    <string name="support_Title">We are here to help!</string>
    <string name="support_Desc">After submitting your request, RETRO RUMBLE representative will attempt to contact you by E-mail,
        please provide all the necessary details so RETRO RUMBLE can assist you as much as we can.</string>
    <string name="DreamcastTitle">SEGA Dreamcast</string>
    <string name="dcQuote">Starts at 6,500 THB</string>
    <string name="dcDescription">SEGA Dreamcast is the last time we have seen SEGA in the video game console space, directly competing
    with Sony PlayStation 2 and Nintendo Gamecube, the sales were not great and SEGA finally conceded, leaving the
    console war entirely. That being said, SEGA has a wide selection of games that everyone can also enjoy.</string>
    <string name="SNKTitle">SNK Consoles</string>
    <string name="PS3Title">Sony PLAYSTATION 3</string>
    <string name="PS3Description">Sony PLAYSTATION 3 launched in 2006 and became a part of the 7th generation of consoles,
        this particular model is the launch model, meaning that it is backwards compatible with PlayStation 2 games,
        while all the PlayStation 3 is backwards compatible with PlayStation 1 games, only a handful of revisions are
        PlayStation 2 backwards compatible, sold in 20GB (CECH-B0x) and 60GB (CECH-Axx) variant.</string>
    <string name="ninTitle">Nintendo Consoles</string>
    <string name="NESTitle">Nintendo Family Computer (JP)</string>
    <string name="NESQuote">Starts at 2,200 THB</string>
    <string name="NESDescription">Nintendo entered the video game console industry with Nintendo Family Computer,
    launched only in Japan, it has sold pretty well throughout its life, and when the console went to the US Market,
    the design has changed to mimic the VHS Recorder, named the Nintendo Entertainment System or NES. It has been unanimously
    accepted as the console that saved the video game industry from the crash.</string>
    <string name="FDSAdd">Add Family Computer Disk System: 2,200 THB</string>
    <string name="rr_Encyclopedia">Welcome to RETRO RUMBLE Encyclopedia!</string>
    <string name="rrEn_label">RETRO RUMBLE Encyclopedia</string>
    <string name="En_label">Encyclopedia</string>
    <string name="fourDgroup_label">4D inc.</string>
    <string name="aboutFourD">About 4D inc.</string>
    <string name="privateCompany">4D inc.: Private Company in Thailand.</string>
    <string name="fourD_HQ">Headquarters: Bangkok, Thailand.</string>
    <string name="fourD_aboutText">4D group is a privately owned company originated in Bangkok, Thailand
        by 4 members, operated under the philosophy of bringing people together and eliminating the barriers of
        speaking the truth. The company currently held the title of the most favorable company in the world
        (as of 2027) and the fastest growing company in terms of revenue growth (as of 2028).</string>
    <string name="fourD_aboutText2">Currently, 4D consists of 4 members,
        with various business in entertainment, music, gaming, and social responsibility.</string>
    <string name="fourD_aboutText3">Members of the 4D group has been involved in many acts of being bullied in high school,
        which sparked a common interest among them to form a group called 4D, they stated that it was a tough time and
        decided that they would stay together and continue working together as a team to change the world,
        so that no one would have to deal with the issues they have been through. As of 2026,
        the member launched a campaign known as “4D Academy” to help build a platform for teenagers who have been
        dealing with bullying issues, and various social issues, which became very successful and impacted a wide
        variety of communities. After 6 months since the launch of the campaign, 4D members established 4D inc.
        A private company which will took over the project operation of both 4D Academy and RETRO RUMBLE which
        launched in the same year as 4D Academy.</string>
</resources>