<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SEGAFragment">

    <TextView
        android:id="@+id/SEGATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/PSTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SEGATitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SEGATitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/SEGA_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/New2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SEGATitle" />

    <Button
        android:id="@+id/backButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:fontFamily="monospace"
        android:text="Back"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/New2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="monospace"
        android:text="@string/NewestArrival"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/dreamcastButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SEGATitle2" />

    <ImageButton
        android:id="@+id/dreamcastButton"
        android:layout_width="283dp"
        android:layout_height="207dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="9dp"
        android:scaleType="fitCenter"
        android:src="@drawable/_200px_sega_dreamcast_set"
        app:layout_constraintBottom_toTopOf="@+id/dreamcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/New2" />

    <TextView
        android:id="@+id/dreamcast"
        android:layout_width="204dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="monospace"
        android:text="@string/DreamcastTitle"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dcQuote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dreamcastButton" />

    <TextView
        android:id="@+id/dcQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/dcQuote"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/viewNinText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dreamcast" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/ViewAll"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backButton7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNinText" />

    <TextView
        android:id="@+id/viewNinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="monospace"
        android:text="@string/shopButtonTitle"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dcQuote" />

</androidx.constraintlayout.widget.ConstraintLayout>