<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.a4d.retrorumble.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_FirstFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.a4d.retrorumble.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_SecondFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.a4d.retrorumble.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_FourthFragment"
            app:destination="@id/FourthFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_ThirdFragment_to_FifthFragment"
            app:destination="@id/FifthFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_ThirdFragment_to_MapFragment"
            app:destination="@id/MapFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_ThirdFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>

    </fragment>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.a4d.retrorumble.FourthFragment"
        android:label="@string/arcade_pass"
        tools:layout="@layout/fragment_fourth">
        <action
            android:id="@+id/action_FourthFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_FourthFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>

    </fragment>
    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.a4d.retrorumble.FifthFragment"
        android:label="@string/free_drinks"
        tools:layout="@layout/fragment_fifth">
        <action
            android:id="@+id/action_FifthFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
        <action
            android:id="@+id/action_FifthFragment_to_AboutFragment"
            app:destination="@id/AboutFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>

    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="com.a4d.retrorumble.MapFragment"
        android:label="@string/rr_nearyou"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_MapFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
    </fragment>
    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.a4d.retrorumble.AboutFragment"
        android:label="@string/rr_AboutTitle"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_AboutFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"></action>
    </fragment>
</navigation>